Compiler/tests/typing/good/testfile-shadow-2.rs

fn main() {
   let x = 42;
   let x = true;
   if x { }
}
