Compiler/tests/typing/bad/testfile-subscript-2.rs

fn main() { let x = 42; x[1]; }
